--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
     </div>  
 <div class="casestudy">
-    <img src="images/Cooka20.png" style="max-width: 100%">
+    <img src="images/cooka20.png" style="max-width: 100%">
 </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
